Fix process showing wrong heading on mobile in jobs

--- a/content/themes/dude/sass/views/_single-job.scss
+++ b/content/themes/dude/sass/views/_single-job.scss
@@ -1,3 +1,4 @@
+// stylelint-disable
 .single-job .block-icon-list-cols + .wp-block-image {
   margin-top: var(--padding-container-vertical);
 }
@@ -13,4 +14,13 @@ body.postid-11453 .block-images + .block-icon-list-cols > .container {
 body.postid-11453 .block-images > .container {
   padding-bottom: 0;
   padding-top: var(--padding-container-vertical);
+}
+
+.single-job .block.block-process .head > h2::after {
+  display: none !important;
+}
+
+.single-job .block.block-process .head > h2 {
+  text-indent: unset !important;
+  visibility: visible !important;
 }
